Change SVG from max-height: 100% to overflow: hidden to resolve IE issue

--- a/style/wee.reset.less
+++ b/style/wee.reset.less
@@ -38,7 +38,7 @@
 		max-width: 100%;
 	}
 	svg {
-		max-height: 100%;
+		overflow: hidden;
 	}
 	embed,
 	object {
